# Django-Blog-App

./: README.md  pyproject.toml  requirements.txt
blog/: models.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: main.css
blog/templates/blog/: base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
settings/: settings.py  urls.py
users/: apps.py  models.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
