[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["shotowon <sanzhar.maratov@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
django-crispy-forms = "2.3"
crispy-bootstrap4 = "^2024.10"
pillow = "10.4"


[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
